--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.example.Peer_Alert"
+          package="net.aabbcc1241.Peer_Alert"
           android:versionCode="1"
           android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="16"/>
+    <uses-sdk android:minSdkVersion="16" android:targetSdkVersion="19"/>
+    <uses-permission android:name="ANDROID.PERMISSION.INTERNET"/>
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher"
-    android:theme="@android:style/Theme.Holo.Light">
+                 android:theme="@android:style/Theme.Holo.Light">
         <activity android:name="net.aabbcc1241.Peer_Alert.MainActivity"
-                  android:label="@string/app_name">
+                  android:label="@string/app_name"
+                  android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
